feautre: 学习模版的总结

--- a/每日一面/2020-11-04.md
+++ b/每日一面/2020-11-04.md
@@ -1,4 +1,4 @@
-## 如何写一个方法交换两个Integer类型的值？
+## x如何写一个方法交换两个Integer类型的值？
 
 刚看到这个问题的时候，可能会觉得很简单，但是真正实现出来就会遇到一些奇怪的现象。下面我先我第一感觉的解决方法。
 
@@ -115,3 +115,81 @@ declaredField.set(value1,value2);
 ![img](https://img-blog.csdnimg.cn/20181106165501417.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3NpbmF0XzMwMTYwNzI3,size_16,color_FFFFFF,t_70)
 
 从上面可以看出，value1和value2的值都是2了，这就是缓存引起的问题。
+
+## 算法题：打印出12345的排列组合
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## sql查询题：
+
+
+
+部门表
+
+```sql
+DROP TABLE IF EXISTS `depart`;
+CREATE TABLE `depart` (
+  `id` int NOT NULL AUTO_INCREMENT,
+  `name` varchar(255) DEFAULT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=4 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+SET FOREIGN_KEY_CHECKS = 1;
+```
+
+员工表
+
+```sql
+DROP TABLE IF EXISTS `employee`;
+CREATE TABLE `employee` (
+  `id` int NOT NULL,
+  `name` varchar(255) DEFAULT NULL,
+  `depart_id` int DEFAULT NULL,
+  `height` double DEFAULT NULL,
+  `weight` double DEFAULT NULL,
+  `title` varchar(255) DEFAULT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+SET FOREIGN_KEY_CHECKS = 1;
+```
+
+查询部门人数超过两人的人且身高超过170 -180
+
+```sql
+SELECT 
+CONCAT(name,title), id,  height
+from 
+employee 
+WHERE 
+		employee.depart_id 
+		in 
+		(SELECT depart_id FROM employee GROUP BY employee.depart_id HAVING COUNT(employee.depart_id)>2)  
+and  
+		height BETWEEN 170 and 171;
+```
+
+### groupby的用法及原理详解
+
+
+
+
+
+
+
