feature: 增加软连接

--- a/Thread/21 原子类:无锁工具类的典范.md
+++ b/Thread/21 原子类:无锁工具类的典范.md
@@ -306,3 +306,4 @@ public final native boolean compareAndSetLong(Object o, long offset,
 
 - 无锁方案相对于互斥锁方案，优点非常多，首先性能好，其次是基本不会出现死锁问题。但会出现饥饿 和 活锁问题， 因为会自旋反复重试。
 - 上面所述的原子类实现方案都是针对一个共享变量，如果需要解决多个变量的原子性问题，建议还是使用互斥锁方案。
+- 无锁方案会有ABA问题， 通过增加版本号解决。
